[workspace]
members = [".", "revision-derive"]

[workspace.package]
edition = "2024"
version = "0.16.0"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "A serialization and deserialization implementation which allows for schema-evolution."
repository = "https://github.com/surrealdb/revision"
homepage = "https://github.com/surrealdb/revision"
documentation = "https://docs.rs/revision/"
keywords = ["serialization", "encoding", "revision", "version", "bincode"]
categories = ["encoding"]
license = "Apache-2.0"

[package]
name = "revision"
publish = true
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[workspace.lints]

[features]
default = ["specialised"]
specialised = []

[dependencies]
revision-derive = { version = "0.16.0", path = "revision-derive" }
bytes = { version = "1.11.0", optional = true }
chrono = { version = "0.4.42", features = ["serde"], optional = true }
geo = { version = "0.31.0", features = ["use-serde"], optional = true }
imbl = { version = "6.1.0", optional = true }
ordered-float = { version = "5.1.0", optional = true }
regex = { version = "1.12.2", optional = true }
roaring = { version = "0.11.2", features = ["serde"], optional = true }
rust_decimal = { version = "1.39.0", optional = true }
uuid = { version = "1.19.0", optional = true }

[dev-dependencies]
rand = "0.9.2"
criterion = "0.7.0"
bincode = "1.3.3"
serde = "1.0.228"

[[bench]]
name = "roaring"
harness = false
required-features = ["roaring"]

[[bench]]
name = "generic"
harness = false

[[bench]]
name = "vec_i8_comparison"
harness = false

[[bench]]
name = "vec_i16_comparison"
harness = false

[[bench]]
name = "vec_i32_comparison"
harness = false

[[bench]]
name = "vec_i64_comparison"
harness = false

[[bench]]
name = "vec_i128_comparison"
harness = false

[[bench]]
name = "vec_u8_comparison"
harness = false

[[bench]]
name = "vec_u16_comparison"
harness = false

[[bench]]
name = "vec_u32_comparison"
harness = false

[[bench]]
name = "vec_u64_comparison"
harness = false

[[bench]]
name = "vec_u128_comparison"
harness = false

[[bench]]
name = "vec_f32_comparison"
harness = false

[[bench]]
name = "vec_f64_comparison"
harness = false

[[bench]]
name = "vec_string_comparison"
harness = false

[[bench]]
name = "specialisation_comparison"
harness = false

[[bench]]
name = "ordmap_comparison"
harness = false
required-features = ["imbl"]
